--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     </div>
   
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
+<script src="assets/api.gitignore/config.js"></script>
 <script src="assets/script.js"></script>
 </body>
 </html>
