--- a/index.html
+++ b/index.html
@@ -23,11 +23,9 @@
                 <div id="gif-view"></div>
             </div>    
             <div class="container col-md-4">
-                    <form id="animal-form">
+                    <form id="animal-form" class="form-inline">
                         <label for="animal-input">Add a new animal!</label>
                         <input type="text" id="animal-input"><br>
-                    
-                        <!-- Button triggers new movie to be added -->
                         <input id="add-animal" class="btn btn-dark" type="submit" value="Submit">
                     </form>
             </div>
